--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -114,30 +114,35 @@
 
     </div>
 
-    <div class="row">
-      <div class="col">
-        <div class="d-flex my-2">
-          <% if current_user.id == @incident.user_id %>
-            <%= link_to 'インシデントを編集する', edit_incident_path(@incident), class:"btn btn-primary flex-fill mx-2", type:"button" %>
-            <%= link_to 'インシデントを削除する', incident_path(@incident), method: :delete, class:"btn btn-primary flex-fill mx-2", type:"button" %>
+    <%# 各ボタン %>
+    <% if user_signed_in? %>
+      <div class="row">
+        <div class="col">
+          <div class="d-flex my-2">
+            <% if current_user.id == @incident.user_id %>
+              <%= link_to 'インシデントを編集する', edit_incident_path(@incident), class:"btn btn-primary flex-fill mx-2", type:"button" %>
+              <%= link_to 'インシデントを削除する', incident_path(@incident), method: :delete, class:"btn btn-primary flex-fill mx-2", type:"button" %>
+            <% end %>
+          </div>
+        </div>
+        <div class="col">
+          <% if @incident.response.nil? %>
+            <div class="d-grid my-2">
+              <%= link_to 'レスポンスを投稿する', new_incident_response_path(@incident, @response), class:"btn btn-primary mx-2", type:"button" %>
+            </div>
+          <% else %>
+            <div class="d-flex my-2">
+              <% if current_user.id == @incident.response.user_id %>
+                <%= link_to 'レスポンスを編集する', edit_incident_response_path(@incident, @incident.response), class:"btn btn-primary flex-fill mx-2", type:"button" %>
+                <%= link_to 'レスポンスを削除する', incident_response_path(@incident, @incident.response), method: :delete, class:"btn btn-primary flex-fill mx-2", type:"button" %>
+              <% end %>
+            </div>
           <% end %>
         </div>
       </div>
-      <div class="col">
-        <% if @incident.response.nil? %>
-          <div class="d-grid my-2">
-            <%= link_to 'レスポンスを投稿する', new_incident_response_path(@incident, @response), class:"btn btn-primary mx-2", type:"button" %>
-          </div>
-        <% else %>
-          <div class="d-flex my-2">
-            <% if current_user.id == @incident.response.user_id %>
-              <%= link_to 'レスポンスを編集する', edit_incident_response_path(@incident, @incident.response), class:"btn btn-primary flex-fill mx-2", type:"button" %>
-              <%= link_to 'レスポンスを削除する', incident_response_path(@incident, @incident.response), method: :delete, class:"btn btn-primary flex-fill mx-2", type:"button" %>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-    </div>
+    <% end %>
+    <%# /各ボタン %>
+
     <%# コメント情報 %>
     <div class="row">
       <div class="col">
