--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,10 +22,10 @@
           <div class="btn btn-dark me-2">
             <%= current_user.name %>
           </div>
-          <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "btn btn-outline-light me-2" %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn btn-outline-light me-2" %>
         <% else %>
-          <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-outline-warning me-2" %>
-          <%= link_to 'Log in', new_user_session_path, class: "btn btn-outline-light me-2" %>
+          <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-warning me-2" %>
+          <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-light me-2" %>
         <% end %>
       </div>
     </div>
